fixed layout issue with bill section

--- a/app/styles/billtext.styl
+++ b/app/styles/billtext.styl
@@ -18,13 +18,13 @@
 //   text-align center
 //   margin 0 auto
 
-// .searchContainer
-//   display: block
-//   text-align: left
-//   width: 100%
+.searchContainer
+  display: block
+  text-align: left
+  height 3rem
 
-// .searchContainer form, .searchContainer select
-//   display: inline-block
+.searchContainer form, .searchContainer select
+  display: inline-block
 
 // #billTextContainer > iframe
 //   margin-top 20px
